@@ -1,4 +1,4 @@
-Copyright (c) 2017 - 2025, Přemysl Eric Janouch <p@janouch.name>
+Copyright (c) 2017 - 2026, Přemysl Eric Janouch <p@janouch.name>
 
 Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted.
